--- a/src/EventManager.Shared/EventManager.Shared.csproj
+++ b/src/EventManager.Shared/EventManager.Shared.csproj
@@ -3,6 +3,8 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Authors>musademir</Authors>
+    <Product>EventManagerMiddleware</Product>
   </PropertyGroup>
 
 </Project>
