--- a/example/BasicPublisherConsole/BasicPublisherConsole/BasicPublisherConsole.csproj
+++ b/example/BasicPublisherConsole/BasicPublisherConsole/BasicPublisherConsole.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FBM.Event.DefaultManager" Version="1.0.0" />
+    <PackageReference Include="EventManager.DefaultManager" Version="1.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.3" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
