event manager available now

--- a/src/EventManager.Core/EventManager.Core.csproj
+++ b/src/EventManager.Core/EventManager.Core.csproj
@@ -5,6 +5,7 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Authors>musademir</Authors>
     <Product>EventManagerMiddleware</Product>
+    <Version>0.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
