--- a/src/EventManager.EventChecker/EventManager.EventChecker.csproj
+++ b/src/EventManager.EventChecker/EventManager.EventChecker.csproj
@@ -6,6 +6,7 @@
     <Authors>musademir</Authors>
     <Company>musademir</Company>
     <Product>EventManagerMiddleware</Product>
+    <Version>0.0.2</Version>
   </PropertyGroup>
 
   <ItemGroup>
