--- a/src/EventManager.DefaultManager/EventManager.DefaultManager.csproj
+++ b/src/EventManager.DefaultManager/EventManager.DefaultManager.csproj
@@ -3,9 +3,11 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Authors>musademir</Authors>
+    <Authors>demirmusa</Authors>
     <Product>EventManagerMiddleware</Product>
-    <Version>0.0.1</Version>
+    <Version>0.0.3</Version>
+    <PackageProjectUrl>https://github.com/demirmusa/EventManagementMiddleware</PackageProjectUrl>
+    <Company>demirmusa</Company>
   </PropertyGroup>
 
   <ItemGroup>
