--- a/src/EventManager.EventChecker.WebApi/EventManager.EventChecker.WebApi.csproj
+++ b/src/EventManager.EventChecker.WebApi/EventManager.EventChecker.WebApi.csproj
@@ -3,15 +3,15 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Authors>musademir</Authors>
-    <Company>musademir</Company>
+    <Version>0.0.1</Version>
+    <Authors>demirmusa</Authors>
+    <Company>demirmusa</Company>
     <Product>EventManagerMiddleware</Product>
-    <Version>0.0.2</Version>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="2.2.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
   </ItemGroup>
 
   <ItemGroup>
