--- a/src/test/NUnitTestProject1/NUnitTestProject1.csproj
+++ b/src/test/NUnitTestProject1/NUnitTestProject1.csproj
@@ -7,8 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.3" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.4" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
     <PackageReference Include="nunit" Version="3.11.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.11.0" />
@@ -17,6 +16,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\EventManager.DefaultManager\EventManager.DefaultManager.csproj" />
+    <ProjectReference Include="..\..\EventManager.EventChecker.SQL\EventManager.EventChecker.SQL.csproj" />
+    <ProjectReference Include="..\..\EventManager.EventChecker.WebApi\EventManager.EventChecker.WebApi.csproj" />
   </ItemGroup>
 
 </Project>
